--- a/catalog/view/theme/default/stylesheet/core.css
+++ b/catalog/view/theme/default/stylesheet/core.css
@@ -83,6 +83,8 @@ xxl
 		@media (max-width: 767px) {
 			.container { max-width: 95%; }
 			.container-wrapper .container { max-width: 95%; }
+
+			#container-products-categories #contentcontainer2 > .container { padding-left: 0px; padding-right: 0px; }
 		}
 		@media (min-width: 768px) and (max-width: 991px) {
 			.container { max-width: 700px; }
@@ -338,7 +340,7 @@ xxl
 		.product-sale-container {
 			display: block;
 			box-sizing: border-box;
-			padding: 0px 15px;
+			padding: 0px 10px;
 		}
 
 		.products-grid .subcategory {
@@ -1003,7 +1005,7 @@ xxl
 			nav.account > a {
 				display: inline-block;
 				position: relative;
-				width: 108px;
+				width: 116px;
 				height: 100%;
 				box-sizing: border-box;
 				margin: 0 20px;
@@ -1033,8 +1035,8 @@ xxl
 			
 			@media (max-width: 575px) {
 				nav.account > a  {
-					width: auto;
-					margin: 0px 3px;
+					width: 18%;
+					margin: 0px;
 					padding: 12px 12px;
 
 					font-size: 16px;
@@ -3389,7 +3391,7 @@ xxl
 
 			.remodal .cart-form .row > .col {
 				display: inline-block;
-				width: 49.6%;
+				width: 49.5%;
 			}
 
 			@media (max-width: 575px) {
